--- a/courses/french.html
+++ b/courses/french.html
@@ -166,7 +166,7 @@
                 <div class="form-group row">
                   <div class="col-12">
                     <div class="btn btn-primary btn-block">
-                      Submit & SignUp
+                      Submit and SignUp
                     </div>
                   </div>
                   <!--div class="col-sm-6 ">
@@ -211,7 +211,7 @@
                 <br>
                 <p>• Skill Level: All levels</p>
                 <hr>
-                <p>• Access on Mobile & PC</p>
+                <p>• Access on Mobile and PC</p>
                 <hr>
                 <p>• Language: English</p>
                 <hr>
@@ -219,7 +219,7 @@
                 <hr>
                 <p>• Doubt Sessions</p>
                 <hr>
-                <p>• Live & Interactive classes</p>
+                <p>• Live and Interactive classes</p>
                 <hr>
                 <p>• Experienced Faculties</p>
                 <hr>
@@ -235,13 +235,13 @@
               </p>
               <h5>Course Curriculum</h5>
               <p>
-                1. Upon commencement, the course will focus on alphabets and numbers as well as the concept of formal and informal greetings, farewell and introduction.<br>
-                2. To make your basics stronger, the course will introduce verbs, both regular and irregular.   <br>
-                3. You will also learn how to describe a person, likes and dislikes along with relation, food, hobby, place and invitation vocabulary.<br>
-                4. To make you fluent in the language, you will be taught seasons, months, days of a week and time. <br>
-                5. Talk with French etiquette like ordering in a restaurant and paying bills, speak about any event and ask for directions.<br>
-                6. Formal topics like Email writing will also be brushed up.<br>
-                7. Weekly tests which will help you strengthen your grip of the language.<br>
+                • Upon commencement, the course will focus on alphabets and numbers as well as the concept of formal and informal greetings, farewell and introduction.<br>
+                • To make your basics stronger, the course will introduce verbs, both regular and irregular.   <br>
+                • You will also learn how to describe a person, likes and dislikes along with relation, food, hobby, place and invitation vocabulary.<br>
+                • To make you fluent in the language, you will be taught seasons, months, days of a week and time. <br>
+                • Talk with French etiquette like ordering in a restaurant and paying bills, speak about any event and ask for directions.<br>
+                • Formal topics like Email writing will also be brushed up.<br>
+                • Weekly tests which will help you strengthen your grip of the language.<br>
               </p>  
             </div>
         </div>
