--- a/courses/game.html
+++ b/courses/game.html
@@ -169,7 +169,7 @@
                 <div class="form-group row">
                   <div class="col-12">
                     <div class="btn btn-primary btn-block">
-                      Submit & SignUp
+                      Submit and SignUp
                     </div>
                   </div>
                   <!--div class="col-sm-6 ">
@@ -232,7 +232,7 @@
       <div class="row">
         <div class="col-12 text-center">
           <p>
-            <a href="../terms.html" class="footer-text social">Terms & Conditions</a>
+            <a href="../terms.html" class="footer-text social">Terms and Conditions</a>
             <a href="../privacy.html" class="footer-text social">Privacy Policy</a>
             <a href="../refund.html" class="footer-text social">Cancellation/Refund Policy</a>
           </p>
