--- a/courses/german.html
+++ b/courses/german.html
@@ -165,7 +165,7 @@
                 <div class="form-group row">
                   <div class="col-12">
                     <div class="btn btn-primary btn-block">
-                      Submit & SignUp
+                      Submit and SignUp
                     </div>
                   </div>
                   <!--div class="col-sm-6 ">
@@ -211,7 +211,7 @@
                 <br>
                 <p>• Skill Level: All levels</p>
                 <hr>
-                <p>• Access on Mobile & PC</p>
+                <p>• Access on Mobile and PC</p>
                 <hr>
                 <p>• Language: English</p>
                 <hr>
@@ -219,7 +219,7 @@
                 <hr>
                 <p>• Doubt Sessions</p>
                 <hr>
-                <p>• Live & Interactive classes</p>
+                <p>• Live and Interactive classes</p>
                 <hr>
                 <p>• Experienced Faculties</p>
                 <hr>
@@ -235,12 +235,12 @@
               </p>
               <h5>Course Curriculum</h5>
               <p>
-                1. Learn the basics of the language including the concept of formal and informal greetings, farewell, verbs etc. <br>
-                2. To make your basics even stronger, you will learn how to describe a person, relation vocabulary. <br>
-                3. Learn the nomenclature of days, months and time and boost your confidence in the language. <br>
-                4. Learn German phrases in everyday life which will help you learn the language better.<br>
-                5. Periodic tests will help you strengthen your grip on the language. <br>
-                6. At the end of this eight-week course, your fluency in German will increase.<br>
+                • Learn the basics of the language including the concept of formal and informal greetings, farewell, verbs etc. <br>
+                • To make your basics even stronger, you will learn how to describe a person, relation vocabulary. <br>
+                • Learn the nomenclature of days, months and time and boost your confidence in the language. <br>
+                • Learn German phrases in everyday life which will help you learn the language better.<br>
+                • Periodic tests will help you strengthen your grip on the language. <br>
+                • At the end of this eight-week course, your fluency in German will increase.<br>
               </p>
             </div>
         </div>
