--- a/courses/lang.html
+++ b/courses/lang.html
@@ -117,7 +117,7 @@
                         LearnYuva's French Course.
                     </h4>
                     <p class="card-text">
-                        Learn the language of love and amazing culture & traditions.
+                        Learn the language of love and amazing culture and traditions.
                     </p>
                     <a href="french.html" class="btn btn-primary">View Course</a>
                 </div>
