--- a/courses/spanish.html
+++ b/courses/spanish.html
@@ -165,7 +165,7 @@
                 <div class="form-group row">
                   <div class="col-12">
                     <div class="btn btn-primary btn-block">
-                      Submit & SignUp
+                      Submit and SignUp
                     </div>
                   </div>
                   <!--div class="col-sm-6 ">
@@ -187,7 +187,7 @@
             <div class="row">
                 <div class="col-sm-6 col-12 my-auto">
                     <h2>Learn Spanish from basics.</h2>
-                    <h6><p> Get the hang of using one of the world’s most phonetic languages, also the second most used language in the world , by live online sessions. We will aid you in gaining mastery over Spanish with our careful guidance suited to your needs.
+                    <h6><p> Get the hang of using one of the world’s most phonetic languages, also the second most used language in the world, by live online sessions. We will aid you in gaining mastery over Spanish with our careful guidance suited to your needs.
                     </p></h6>
                   <br>
                   <a href="https://rzp.io/l/8Aw6js5">
@@ -213,7 +213,7 @@
                 <br>
                 <p>• Skill Level: All levels</p>
                 <hr>
-                <p>• Access on Mobile & PC</p>
+                <p>• Access on Mobile and PC</p>
                 <hr>
                 <p>• Language: English</p>
                 <hr>
@@ -221,7 +221,7 @@
                 <hr>
                 <p>• Doubt Sessions</p>
                 <hr>
-                <p>• Live & Interactive classes</p>
+                <p>• Live and Interactive classes</p>
                 <hr>
                 <p>• Experienced Faculties</p>
                 <hr>
@@ -230,20 +230,20 @@
             <div class="col-md-9 col-12 course-content">
               <h5>Course Overview</h5>
               <p>
-                • Familiarize yourself with basic conversational Skills in Spanish. <br>
+                • Familiarize yourself with basic conversational skills in Spanish. <br>
                 • Learn the lingua franca of Spain with 20 hours of live sessions.<br>
                 • Have your doubts answered by our experienced faculty.<br>
                 • Quench your thirst of knowledge and learn about the rich history of Spain. <br>
               </p>
               <h5>Course Curriculum</h5>
               <p>
-                1.Learn the Spanish alphabets. <br>
-                2.Learn the proper use of Definite and Indefinite Articles. <br>
-                3.Understand the use of Demonstrative, Interrogative and Personal Pronouns better.<br>
-                4.Decipher the usage of present tense with basic verbs. <br>
-                5.Convey your needs better with the appropriate quantifiers.<br>
-                6.Speak fluently in Spanish keeping in mind the verbatim and vernacular. <br>
-                7.Rest assured in your knowledge of the language with periodic assessments and keep track of your progress.<br>
+                • Learn the Spanish alphabets. <br>
+                • Learn the proper use of Definite and Indefinite Articles. <br>
+                • Understand the use of Demonstrative, Interrogative and Personal Pronouns better.<br>
+                • Decipher the usage of present tense with basic verbs. <br>
+                • Convey your needs better with the appropriate quantifiers.<br>
+                • Speak fluently in Spanish keeping in mind the verbatim and vernacular. <br>
+                • Rest assured in your knowledge of the language with periodic assessments and keep track of your progress.<br>
               </p>
             </div>
         </div>
