--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="form-group row">
               <div class="col-12">
                 <div class="btn btn-primary btn-block">
-                  Submit & SignUp
+                  Submit and SignUp
                 </div>
               </div>
               <!--div class="col-sm-6 ">
@@ -197,7 +197,7 @@
       </div>
       <div class="row">
         <div class="col-sm-4 offset-sm-1 col-12">
-          <a class="btn btn-primary" href="/users/register">Join us & start learning</a>
+          <a class="btn btn-primary" href="/users/register">Join us and start learning</a>
         </div>
         <div class="col-sm-7">
         </div>
