--- a/aboutus.html
+++ b/aboutus.html
@@ -166,7 +166,7 @@
             <div class="form-group row">
               <div class="col-12">
                 <div class="btn btn-primary btn-block">
-                  Submit & SignUp
+                  Submit and SignUp
                 </div>
               </div>
               <!--div class="col-sm-6 ">
@@ -188,7 +188,7 @@
               <br>
            <h3>Our Story</h3>
               <br>
-                <p>Our name LearnYuva conveys our dedication to bring a healthy transition in the life of the young and the curious. Our name defines our noble profession. ‘Learn’ which means “to gain knowledge” and ‘Yuva’ symbolizing “the youth”. LearnYuva is here to boost the thinking capacity of young and brilliant minds by building an indivisible bond between knowledge and youth through live and interactive sessions. </p>
+                <p>Our name LearnYuva conveys our dedication to bring a healthy transition in the life of the young and the curious. Our name defines our noble profession, ‘Learn’ which means “to gain knowledge” and ‘Yuva’ symbolizing “the youth”. LearnYuva is here to boost the thinking capacity of young and brilliant minds by building an indivisible bond between knowledge and youth through live and interactive sessions. </p>
             </div>
             <div class="col-12">
                 <p>LearnYuva is an online educational platform which focuses primarily on educating those aspiring students who wish to take a step forward and do more than the necessary by not just achieving their targets in school, but also in the outside world. Through live classes, we endeavour to provide inquisitive minds with pragmatic approach towards education which not only educates them but also makes them rational in their thinking. We aim to reach each and every student who is struggling to learn through conventional methods by equipping them with a massive range of technical and non-technical courses like app development, foreign languages, robotics, etc. with insightful learning experiences thus ensuring their all-round development.
@@ -220,7 +220,7 @@
               </div>
               <div class="col-sm-8 col-12 m-auto">
                 <h4>Simant Keshari</h4>
-                <h6>Founder & CEO</h6>
+                <h6>Founder and CEO</h6>
               </div>
             </div>
             <div class="row member">
