--- a/courses/ios.html
+++ b/courses/ios.html
@@ -166,7 +166,7 @@
                 <div class="form-group row">
                   <div class="col-12">
                     <div class="btn btn-primary btn-block">
-                      Submit & SignUp
+                      Submit and SignUp
                     </div>
                   </div>
                   <!--div class="col-sm-6 ">
