A lot of errors removed

--- a/aboutus.html
+++ b/aboutus.html
@@ -186,24 +186,25 @@
         <div class="row">
             <div class="col-12">
               <br>
-           <h3>Our Story</h3>
+              <h3>Our Story</h3>
               <br>
-                <p>Our name LearnYuva conveys our dedication to bring a healthy transition in the life of the young and the curious. Our name defines our noble profession, ‘Learn’ which means “to gain knowledge” and ‘Yuva’ symbolizing “the youth”. LearnYuva is here to boost the thinking capacity of young and brilliant minds by building an indivisible bond between knowledge and youth through live and interactive sessions. </p>
+              <p>Our name LearnYuva conveys our dedication to bring a healthy transition in the life of the young and the curious. Our name defines our noble profession, "Learn" which means “to gain knowledge” and "Yuva" symbolizing “the youth”. LearnYuva is here to boost the thinking capacity of young and brilliant minds by building an indivisible bond between knowledge and youth through live and interactive sessions. </p>
             </div>
             <div class="col-12">
-                <p>LearnYuva is an online educational platform which focuses primarily on educating those aspiring students who wish to take a step forward and do more than the necessary by not just achieving their targets in school, but also in the outside world. Through live classes, we endeavour to provide inquisitive minds with pragmatic approach towards education which not only educates them but also makes them rational in their thinking. We aim to reach each and every student who is struggling to learn through conventional methods by equipping them with a massive range of technical and non-technical courses like app development, foreign languages, robotics, etc. with insightful learning experiences thus ensuring their all-round development.
-                </p>
-            </div>
-            <div class="col-12">
-              <br>
-           <h3>Our Goals</h3>
-              <br>
-              <p>We, at LearnYuva, strive to provide students with an environment conducive to innovation and learning with dedicated faculties to help students realize their potential. From the portals at LearnYuva, we intend to send forth sensible and socially conscious individuals who shall be the instruments of positive change and peace in this strife-stricken world. Here at LearnYuva, the students are encouraged to achieve and aspire for success while learning to plan ahead as preparation is the key to a successful life.
+              <p>LearnYuva is an online educational platform which focuses primarily on educating those aspiring students who wish to take a step forward and do more than the necessary by not just achieving their targets in school, but also in the outside world. 
               </p>
             </div>
             <div class="col-12">
-              <p>Our team is clear on its goal and comprises of likeminded individuals who believe in educating for a better tomorrow. With that foundation, we can apply our personality and values to define how we will accomplish those goals. Any individual who believes and is passionate about the spread of knowledge for a more educated and aware world is welcome to join our clan as work towards creating something bigger than ourselves.
-           </p>
+            <br>
+            <h3>Our Goals</h3>
+            <br>
+            <p>We, at LearnYuva, strive to provide students with an environment conducive to innovation and learning with dedicated faculties to help students realize their potential. From the portals at LearnYuva, we intend to send forth sensible and socially conscious individuals who shall be the instruments of positive change and peace in this strife-stricken world. Here at LearnYuva, the students are encouraged to achieve and aspire for success while learning to plan ahead as preparation is the key to a successful life.
+            </p>
+            <p>Through live classes, we endeavour to provide inquisitive minds with a pragmatic approach towards education which not only educates them but also makes them rational in their thinking. We aim to reach each and every student who is struggling to learn through conventional methods by equipping them with a massive range of technical and non-technical courses like app development, foreign languages, robotics, etc. with insightful learning experiences thus ensuring their all-round development.</p>
+            </div>
+            <div class="col-12">
+              <p>Our team is clear on its goal and comprises of like-minded individuals who believe in educating for a better tomorrow. With that foundation, we can apply our personality and values to define how we will accomplish those goals. Any individual who believes and is passionate about the spread of knowledge for a more educated and aware world is welcome to join our clan as work towards creating something bigger than ourselves.
+              </p>
             </div>
         </div>
     </div>
