--- a/courses/french.html
+++ b/courses/french.html
@@ -223,25 +223,27 @@
                 <hr>
                 <p>• Experienced Faculties</p>
                 <hr>
-                <p>• Duration: 2 months/level</p>
+                <p>• Duration: 2 months</p>
             </div>
             <div class="col-md-9 col-12 course-content">
               <h5>Course Overview</h5>
-              <p>
-                • With 20 hours of live sessions, learn to make basic conversations in French.<br>
-                • Get acquainted with the French lexicon.<br>
-                • Clarify your doubts with our faculty’s careful assistance.<br>
-                • Understand the significance of the French Renaissance.<br>
+              <p class="list-group">
+                <li class="list-group-item">With 20 hours of live sessions, learn to make basic conversations in French.</li>
+                <li class="list-group-item">Get acquainted with the French lexicon.</li>
+                <li class="list-group-item">Clarify your doubts with our faculty’s careful assistance.</li>
+                <li class="list-group-item">Understand the significance of the French Renaissance.</li>
               </p>
               <h5>Course Curriculum</h5>
-              <p>
-                • Upon commencement, the course will focus on alphabets and numbers as well as the concept of formal and informal greetings, farewell and introduction.<br>
-                • To make your basics stronger, the course will introduce verbs, both regular and irregular.   <br>
-                • You will also learn how to describe a person, likes and dislikes along with relation, food, hobby, place and invitation vocabulary.<br>
-                • To make you fluent in the language, you will be taught seasons, months, days of a week and time. <br>
-                • Talk with French etiquette like ordering in a restaurant and paying bills, speak about any event and ask for directions.<br>
-                • Formal topics like Email writing will also be brushed up.<br>
-                • Weekly tests which will help you strengthen your grip of the language.<br>
+              <p class="list-group">
+                <li class="list-group-item">
+                   Upon commencement, the course will focus on alphabets and numbers as well as the concept of formal and informal greetings, farewell and introduction.
+                </li>
+                <li class="list-group-item"> To make your basics stronger, the course will introduce verbs, both regular and irregular.</li>
+                <li class="list-group-item">You will also learn how to describe a person, likes and dislikes along with relation, food, hobby, place and invitation vocabulary.</li>
+                <li class="list-group-item">To make you fluent in the language, you will be taught seasons, months, days of a week and time.</li>
+                <li class="list-group-item">Talk with French etiquette like ordering in a restaurant and paying bills, speak about any event and ask for directions.</li>
+                <li class="list-group-item">Formal topics like Email writing will also be brushed up.</li>
+                <li class="list-group-item">Weekly tests which will help you strengthen your grip of the language.</li>
               </p>  
             </div>
         </div>
