--- a/courses/german.html
+++ b/courses/german.html
@@ -223,24 +223,24 @@
                 <hr>
                 <p>• Experienced Faculties</p>
                 <hr>
-                <p>• Duration: 2 months/level</p>
+                <p>• Duration: 2 months</p>
             </div>
             <div class="col-md-9 col-12 course-content">
               <h5> Course Overview</h5>
-              <p>
-                • Get well versed in the art of making conversations in Deutsch.<br>
-                • Get fluent in German with 20 hours of live classes.<br>
-                • Get your doubts cleared with our faculty’s careful guidance. <br>
-                • Understand the works of German philosophers and scientists in their native language.<br>
+              <p class="list-group">
+                <li class="list-group-item">Get well versed in the art of making conversations in Deutsch.</li>
+                <li class="list-group-item">Get fluent in German with 20 hours of live classes.</li>
+                <li class="list-group-item">Get your doubts cleared with our faculty’s careful guidance. </li>
+                <li class="list-group-item">Understand the works of German philosophers and scientists in their native language.</li>
               </p>
               <h5>Course Curriculum</h5>
               <p>
-                • Learn the basics of the language including the concept of formal and informal greetings, farewell, verbs etc. <br>
-                • To make your basics even stronger, you will learn how to describe a person, relation vocabulary. <br>
-                • Learn the nomenclature of days, months and time and boost your confidence in the language. <br>
-                • Learn German phrases in everyday life which will help you learn the language better.<br>
-                • Periodic tests will help you strengthen your grip on the language. <br>
-                • At the end of this eight-week course, your fluency in German will increase.<br>
+                <li class="list-group-item">Learn the basics of the language including the concept of formal and informal greetings, farewell, verbs etc. </li>
+                <li class="list-group-item">To make your basics even stronger, you will learn how to describe a person, relation vocabulary.</li>
+                <li class="list-group-item">Learn the nomenclature of days, months and time and boost your confidence in the language.</li>
+                <li class="list-group-item">Learn German phrases in everyday life which will help you learn the language better.</li>
+                <li class="list-group-item"> Periodic tests will help you strengthen your grip on the language.</li>
+                <li class="list-group-item"> At the end of this eight-week course, your fluency in German will increase.</li>
               </p>
             </div>
         </div>
