--- a/courses/spanish.html
+++ b/courses/spanish.html
@@ -225,25 +225,25 @@
                 <hr>
                 <p>• Experienced Faculties</p>
                 <hr>
-                <p>• Duration: 2 months/level</p>
+                <p>• Duration: 2 months</p>
             </div>
             <div class="col-md-9 col-12 course-content">
               <h5>Course Overview</h5>
-              <p>
-                • Familiarize yourself with basic conversational skills in Spanish. <br>
-                • Learn the lingua franca of Spain with 20 hours of live sessions.<br>
-                • Have your doubts answered by our experienced faculty.<br>
-                • Quench your thirst of knowledge and learn about the rich history of Spain. <br>
+              <p class="list-group">
+                <li class="list-group-item">Familiarize yourself with basic conversational skills in Spanish.</li>
+                <li class="list-group-item">Learn the lingua franca of Spain with 20 hours of live sessions.</li>
+                <li class="list-group-item">Have your doubts answered by our experienced faculty.</li>
+                <li class="list-group-item">Quench your thirst of knowledge and learn about the rich history of Spain. </li>
               </p>
               <h5>Course Curriculum</h5>
-              <p>
-                • Learn the Spanish alphabets. <br>
-                • Learn the proper use of Definite and Indefinite Articles. <br>
-                • Understand the use of Demonstrative, Interrogative and Personal Pronouns better.<br>
-                • Decipher the usage of present tense with basic verbs. <br>
-                • Convey your needs better with the appropriate quantifiers.<br>
-                • Speak fluently in Spanish keeping in mind the verbatim and vernacular. <br>
-                • Rest assured in your knowledge of the language with periodic assessments and keep track of your progress.<br>
+              <p class="list-group">
+                <li class="list-group-item">Learn the Spanish alphabets.</li>
+                <li class="list-group-item">Learn the proper use of Definite and Indefinite Articles.</li>
+                <li class="list-group-item">Understand the use of Demonstrative, Interrogative and Personal Pronouns better.</li>
+                <li class="list-group-item">Decipher the usage of present tense with basic verbs.</li>
+                <li class="list-group-item">Convey your needs better with the appropriate quantifiers.</li>
+                <li class="list-group-item">Speak fluently in Spanish keeping in mind the verbatim and vernacular.</li>
+                <li class="list-group-item">Rest assured in your knowledge of the language with periodic assessments and keep track of your progress.</li>
               </p>
             </div>
         </div>
