--- a/aboutus.html
+++ b/aboutus.html
@@ -357,10 +357,10 @@
             </div>
             <div class="row member">
               <div class="col-sm-4 col-12">
-                <img class="rounded-circle img-fluid" src="Assets/profiles/lavanya.jpeg">
+                <img class="rounded-circle img-fluid" src="Assets/profiles/tushar.jpg">
               </div>
               <div class="col-sm-8 col-12 m-auto">
-                <h4>Lavanya Iyer</h4>
+                <h4>Tushar Barnwal</h4>
                 <h6>S&M Team</h6>
               </div>
             </div>
