--- a/courses/german.html
+++ b/courses/german.html
@@ -234,14 +234,14 @@
                 <li class="list-group-item">Understand the works of German philosophers and scientists in their native language.</li>
               </p>
               <h5>Course Curriculum</h5>
-              <p>
-                <li class="list-group-item">Learn the basics of the language including the concept of formal and informal greetings, farewell, verbs etc. </li>
-                <li class="list-group-item">To make your basics even stronger, you will learn how to describe a person, relation vocabulary.</li>
-                <li class="list-group-item">Learn the nomenclature of days, months and time and boost your confidence in the language.</li>
-                <li class="list-group-item">Learn German phrases in everyday life which will help you learn the language better.</li>
-                <li class="list-group-item"> Periodic tests will help you strengthen your grip on the language.</li>
-                <li class="list-group-item"> At the end of this eight-week course, your fluency in German will increase.</li>
-              </p>
+             
+                 <p> Learn the basics of the language including the concept of formal and informal greetings, farewell, verbs etc.</p> 
+                 <p> To make your basics even stronger, you will learn how to describe a person, relation vocabulary. </p>
+                 <p> Learn the nomenclature of days, months and time and boost your confidence in the language. </p>
+                 <p> Learn German phrases in everyday life which will help you learn the language better. </p>
+                 <p> Periodic tests will help you strengthen your grip on the language. </p>
+                 <p> At the end of this eight-week course, your fluency in German will increase. </p>
+              
             </div>
         </div>
     </div>
