--- a/courses/german.html
+++ b/courses/german.html
@@ -228,12 +228,12 @@
             <div class="col-md-9 col-12 course-content">
               <h5> Course Overview</h5>
               <br>
-              <p class="list-group">
-                <li class="list-group-item">Get well versed in the art of making conversations in Deutsch.</li>
-                <li class="list-group-item">Get fluent in German with 20 hours of live classes.</li>
-                <li class="list-group-item">Get your doubts cleared with our faculty’s careful guidance. </li>
-                <li class="list-group-item">Understand the works of German philosophers and scientists in their native language.</li>
-              </p>
+              
+               <p> • Get well versed in the art of making conversations in Deutsch.</p>
+               <p> •  Get fluent in German with 20 hours of live classes.</p>
+               <p> • Get your doubts cleared with our faculty’s careful guidance. </p>
+               <p> • Understand the works of German philosophers and scientists in their native language. </p>
+              <br>
               <h5>Course Curriculum</h5>
                 <br>
                  <p> Learn the basics of the language including the concept of formal and informal greetings, farewell, verbs etc.</p> 
@@ -242,7 +242,7 @@
                  <p> Learn German phrases in everyday life which will help you learn the language better. </p>
                  <p> Periodic tests will help you strengthen your grip on the language. </p>
                  <p> At the end of this eight-week course, your fluency in German will increase. </p>
-              
+               <br>
             </div>
         </div>
     </div>
