--- a/courses/german.html
+++ b/courses/german.html
@@ -236,12 +236,12 @@
               <br>
               <h5>Course Curriculum</h5>
                 <br>
-                 <p> Learn the basics of the language including the concept of formal and informal greetings, farewell, verbs etc.</p> 
-                 <p> To make your basics even stronger, you will learn how to describe a person, relation vocabulary. </p>
-                 <p> Learn the nomenclature of days, months and time and boost your confidence in the language. </p>
-                 <p> Learn German phrases in everyday life which will help you learn the language better. </p>
-                 <p> Periodic tests will help you strengthen your grip on the language. </p>
-                 <p> At the end of this eight-week course, your fluency in German will increase. </p>
+                 <p> •  Learn the basics of the language including the concept of formal and informal greetings, farewell, verbs etc.</p> 
+                 <p> • To make your basics even stronger, you will learn how to describe a person, relation vocabulary. </p>
+                 <p> • Learn the nomenclature of days, months and time and boost your confidence in the language. </p>
+                 <p> •  Learn German phrases in everyday life which will help you learn the language better. </p>
+                 <p> •  Periodic tests will help you strengthen your grip on the language. </p>
+                 <p> •  At the end of this eight-week course, your fluency in German will increase. </p>
                <br>
             </div>
         </div>
