--- a/courses/french.html
+++ b/courses/french.html
@@ -227,24 +227,23 @@
             </div>
             <div class="col-md-9 col-12 course-content">
               <h5>Course Overview</h5>
-              <p class="list-group">
-                <li class="list-group-item">With 20 hours of live sessions, learn to make basic conversations in French.</li>
-                <li class="list-group-item">Get acquainted with the French lexicon.</li>
-                <li class="list-group-item">Clarify your doubts with our faculty’s careful assistance.</li>
-                <li class="list-group-item">Understand the significance of the French Renaissance.</li>
-              </p>
+             <br>
+                <p>• With 20 hours of live sessions, learn to make basic conversations in French.</p>  
+                <p>• Get acquainted with the French lexicon.</p>  
+                <p>• Clarify your doubts with our faculty’s careful assistance.</p>  
+                <p>• Understand the significance of the French Renaissance.</p> 
+              <br>
               <h5>Course Curriculum</h5>
-              <p class="list-group">
-                <li class="list-group-item">
-                   Upon commencement, the course will focus on alphabets and numbers as well as the concept of formal and informal greetings, farewell and introduction.
-                </li>
-                <li class="list-group-item"> To make your basics stronger, the course will introduce verbs, both regular and irregular.</li>
-                <li class="list-group-item">You will also learn how to describe a person, likes and dislikes along with relation, food, hobby, place and invitation vocabulary.</li>
-                <li class="list-group-item">To make you fluent in the language, you will be taught seasons, months, days of a week and time.</li>
-                <li class="list-group-item">Talk with French etiquette like ordering in a restaurant and paying bills, speak about any event and ask for directions.</li>
-                <li class="list-group-item">Formal topics like Email writing will also be brushed up.</li>
-                <li class="list-group-item">Weekly tests which will help you strengthen your grip of the language.</li>
-              </p>  
+             <br>
+                <p>• Upon commencement, the course will focus on alphabets and numbers as well as the concept of formal and informal greetings, farewell and introduction.
+                </p>  
+                <p>• To make your basics stronger, the course will introduce verbs, both regular and irregular.</p> 
+                <p>• You will also learn how to describe a person, likes and dislikes along with relation, food, hobby, place and invitation vocabulary.</p> 
+                <p>• To make you fluent in the language, you will be taught seasons, months, days of a week and time.</p>  </li>
+                <p>• Talk with French etiquette like ordering in a restaurant and paying bills, speak about any event and ask for directions.</p>
+                <p>• Formal topics like Email writing will also be brushed up.</li>
+                <p>• Weekly tests which will help you strengthen your grip of the language.</li>
+              <br> 
             </div>
         </div>
     </div>
