--- a/courses/french.html
+++ b/courses/french.html
@@ -209,40 +209,40 @@
             <div class="col-md-3 d-none d-md-block course-stats">
               <h5>Course Features</h5>
                 <br>
-                <p>• Skill Level: All levels</p>
+                <p>Skill Level: All levels</p>
                 <hr>
-                <p>• Access on Mobile and PC</p>
+                <p>Access on Mobile and PC</p>
                 <hr>
-                <p>• Language: English</p>
+                <p>Language: English</p>
                 <hr>
-                <p>• Certificate of completion</p>
+                <p>Certificate of completion</p>
                 <hr>
-                <p>• Doubt Sessions</p>
+                <p>Doubt Sessions</p>
                 <hr>
-                <p>• Live and Interactive classes</p>
+                <p>Live and Interactive classes</p>
                 <hr>
-                <p>• Experienced Faculties</p>
+                <p>Experienced Faculties</p>
                 <hr>
-                <p>• Duration: 2 months</p>
+                <p>Duration: 2 months</p>
             </div>
             <div class="col-md-9 col-12 course-content">
               <h5>Course Overview</h5>
              <br>
-                <p>• With 20 hours of live sessions, learn to make basic conversations in French.</p>  
-                <p>• Get acquainted with the French lexicon.</p>  
-                <p>• Clarify your doubts with our faculty’s careful assistance.</p>  
-                <p>• Understand the significance of the French Renaissance.</p> 
+                <p>With 20 hours of live sessions, learn to make basic conversations in French.</p>  
+                <p>Get acquainted with the French lexicon.</p>  
+                <p>Clarify your doubts with our faculty’s careful assistance.</p>  
+                <p>Understand the significance of the French Renaissance.</p> 
               <br>
               <h5>Course Curriculum</h5>
              <br>
-                <p>• Upon commencement, the course will focus on alphabets and numbers as well as the concept of formal and informal greetings, farewell and introduction.
+                <p>Upon commencement, the course will focus on alphabets and numbers as well as the concept of formal and informal greetings, farewell and introduction.
                 </p>  
-                <p>• To make your basics stronger, the course will introduce verbs, both regular and irregular.</p> 
-                <p>• You will also learn how to describe a person, likes and dislikes along with relation, food, hobby, place and invitation vocabulary.</p> 
-                <p>• To make you fluent in the language, you will be taught seasons, months, days of a week and time.</p>  </li>
-                <p>• Talk with French etiquette like ordering in a restaurant and paying bills, speak about any event and ask for directions.</p>
-                <p>• Formal topics like Email writing will also be brushed up.</li>
-                <p>• Weekly tests which will help you strengthen your grip of the language.</li>
+                <p>To make your basics stronger, the course will introduce verbs, both regular and irregular.</p> 
+                <p>You will also learn how to describe a person, likes and dislikes along with relation, food, hobby, place and invitation vocabulary.</p> 
+                <p>To make you fluent in the language, you will be taught seasons, months, days of a week and time.</p>  </li>
+                <p>Talk with French etiquette like ordering in a restaurant and paying bills, speak about any event and ask for directions.</p>
+                <p>Formal topics like Email writing will also be brushed up.</li>
+                <p>Weekly tests which will help you strengthen your grip of the language.</li>
               <br> 
             </div>
         </div>
