--- a/courses/german.html
+++ b/courses/german.html
@@ -209,39 +209,39 @@
             <div class="col-md-3 d-none d-md-block course-stats">
               <h5>Course Features</h5>
                 <br>
-                <p>• Skill Level: All levels</p>
+                <p>Skill Level: All levels</p>
                 <hr>
-                <p>• Access on Mobile and PC</p>
+                <p>Access on Mobile and PC</p>
                 <hr>
-                <p>• Language: English</p>
+                <p>Language: English</p>
                 <hr>
-                <p>• Certificate of completion</p>
+                <p>Certificate of completion</p>
                 <hr>
-                <p>• Doubt Sessions</p>
+                <p>Doubt Sessions</p>
                 <hr>
-                <p>• Live and Interactive classes</p>
+                <p>Live and Interactive classes</p>
                 <hr>
-                <p>• Experienced Faculties</p>
+                <p>Experienced Faculties</p>
                 <hr>
-                <p>• Duration: 2 months</p>
+                <p>Duration: 2 months</p>
             </div>
             <div class="col-md-9 col-12 course-content">
               <h5> Course Overview</h5>
               <br>
               
-               <p> • Get well versed in the art of making conversations in Deutsch.</p>
-               <p> •  Get fluent in German with 20 hours of live classes.</p>
-               <p> • Get your doubts cleared with our faculty’s careful guidance. </p>
-               <p> • Understand the works of German philosophers and scientists in their native language. </p>
+               <p>Get well versed in the art of making conversations in Deutsch.</p>
+               <p>Get fluent in German with 20 hours of live classes.</p>
+               <p>Get your doubts cleared with our faculty’s careful guidance. </p>
+               <p>Understand the works of German philosophers and scientists in their native language. </p>
               <br>
               <h5>Course Curriculum</h5>
                 <br>
-                 <p> •  Learn the basics of the language including the concept of formal and informal greetings, farewell, verbs etc.</p> 
-                 <p> • To make your basics even stronger, you will learn how to describe a person, relation vocabulary. </p>
-                 <p> • Learn the nomenclature of days, months and time and boost your confidence in the language. </p>
-                 <p> •  Learn German phrases in everyday life which will help you learn the language better. </p>
-                 <p> •  Periodic tests will help you strengthen your grip on the language. </p>
-                 <p> •  At the end of this eight-week course, your fluency in German will increase. </p>
+                 <p>Learn the basics of the language including the concept of formal and informal greetings, farewell, verbs etc.</p> 
+                 <p>To make your basics even stronger, you will learn how to describe a person, relation vocabulary. </p>
+                 <p>Learn the nomenclature of days, months and time and boost your confidence in the language. </p>
+                 <p>Learn German phrases in everyday life which will help you learn the language better. </p>
+                 <p>Periodic tests will help you strengthen your grip on the language. </p>
+                 <p>At the end of this eight-week course, your fluency in German will increase. </p>
                <br>
             </div>
         </div>
